<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="appName">Explorer for OneDrive</string>
    <string name="initializingMessage">Connecting to your Microsoft account…</string>
    <string name="firstWelcomeMessage">Sign in with your Microsoft account to get
        started!
    </string>
    <string name="signInToWindowsLive">Sign in</string>
    <string name="mySkyDrive">Your OneDrive</string>
    <string name="automaticSignInError">Couldn\'t connect automatically. Try manually.</string>
    <string name="manualSignInError">Couldn\'t connect. Do you have an internet connection?</string>
    <string name="noAccountQuestion">No Microsoft account? Go to live.com and register for 7GB of free storage!</string>

    <string name="icon">Icon</string>
    <string name="noItemsInFolder">No files here</string>
    <string name="newFolderTitle">Create a new folder here</string>
    <string name="newFolder">New folder</string>
    <string name="talkingToSkyDriveWait">Talking to OneDrive…</string>
    <string name="imageDisplayError">Couldn\'t show the image</string>
    <string name="copyCutSelectedFiles">Ready to paste</string>
    <string name="imageLoading">Loading image...</string>
    <string name="rootFolderTitle">Home</string>
    <string name="savedFilesTitle">Saved files</string>

    <string name="deletedFiles">Deleted file(s)</string>
    <string name="movedFiles">Moved file(s)</string>
    <string name="copiedFiles">Copied file(s)</string>
    <string name="renamedFiles">Renamed file(s)</string>
    <string name="serviceLabel">Camera AutoUploader for OneDrive</string>


    <string name="fileWillBeDownloaded">The file will be downloaded to your phone</string>
    <string name="ok">OK</string>
    <string name="downloading">Downloading</string>
    <string name="uploading">Uploading</string>
    <string name="downloadingFromSkyDrive">Downloading from OneDrive…</string>
    <string name="fileSaved">File saved</string>
    <string name="downloadError">Something went wrong while downloading. The file was not saved on your phone.</string>

    <string name="savedFileCopy">Copy</string>
    <string name="savedLowerCase">saved</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="skyDrive">OneDrive</string>

    <string name="downloadNoPreview">No preview available</string>
    <string name="downloadFileCannotBeViewed">Can\'t open file for preview. Download instead?</string>
    <string name="openWebBrowser">Open in…</string>

    <string name="createFolder">Create folder</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="description">Description (Optional)</string>
    <string name="renameTitle">Rename files and folders</string>

    <string name="uploadToSkyDrive">Upload to OneDrive</string>
    <string name="uploadTo">Upload to</string>
    <string name="uploadingToSkyDrive">Uploading to your OneDrive…</string>
    <string name="uploadError">Something happened while uploading. The file was not saved in your OneDrive.</string>
    <string name="uploadToThisFolder">Upload here</string>
    <string name="uploadSelected">Upload selected</string>
    <string name="noFilesInFolder">No files in this folder</string>

    <string name="selectedOne">One item selected</string>
    <string name="selectedSeveral">items selected</string>

    <string name="selectAll">Select all</string>
    <string name="selectNone">Select none</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="cut">Cut</string>
    <string name="copy">Copy</string>
    <string name="rename">Rename</string>
    <string name="reload">Refresh</string>
    <string name="download">Download</string>
    <string name="close">Close</string>
    <string name="paste">Paste</string>
    <string name="signOut">Sign out</string>
    <string name="loggedOut">Logged out</string>
    <string name="savedFiles">Saved files</string>

    <string name="deleteConfirmationTitle">Delete files?</string>
    <string name="deleteConfirmationBody">These files will be deleted: \n\n</string>
    <string name="deleteConfirmationQuestion">Are you sure you want to do this?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>


    <string name="appExitConfirmationHeader">Are you sure you want to close?</string>
    <string name="confirmExitHeader">Confirm on app exit</string>
    <string name="confirmExitSummary">Stops you from accidentally closing the app by presenting a confirmation dialog on
        exit
    </string>

    <string name="sharedFiles">Shared files</string>
    <string name="sharingLinks">Sharing links</string>
    <string name="sharingLinksSummary">Anyone with these links will be able to see the file</string>
    <string name="sharingGeneratingLinks">Generating sharing links…</string>
    <string name="sharingEnableEditing">Allow file editing</string>

    <string name="buffering">Buffering</string>
    <string name="playing">Playing</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="paused">Paused</string>
    <string name="saved">Saved</string>
    <string name="stop">Stop</string>
    <string name="stopped">Stopped</string>

    <string name="errorFolderCouldNotBeCreated">Something went wrong in creating the folder. Please try again.</string>
    <string name="errorNoApplicationCouldOpenTheFile">No application could open the file</string>
    <string name="errorOpeningAudioFile">Could not open audio file</string>
    <string name="errorDuringLogin">Error during login</string>
    <string name="errorDeletingFile">Error deleting file(s)</string>
    <string name="errorMovingFile">Error moving file(s)</string>
    <string name="errorRenamingFile">Error renaming file(s)</string>
    <string name="errorCopyingFile">Error copying file(s)</string>
    <string name="errorCouldNotFetchFileForSharing">Could not find the file you shared, sorry!</string>
    <string name="errorTooManyFilesAtOnce">Can\'t handle more than 99 files in one go, sorry. Handling as many as I
        can!
    </string>
    <string name="errorLoggedOut">You\'ve been logged out and have to log in again to keep using the app</string>
    <string name="errorQuotaFetch">Couldn\'t get numbers</string>
    <string name="errorFileNotFound">Couldn\'t find the file, it has not been uploaded</string>

    <string name="settings">Settings</string>
    <string name="cameraUploadHeader">Camera upload</string>
    <string name="cameraUploadSummary">Upload camera images automatically</string>
    <string name="limitCameraToWifiHeader">Only upload while on WiFi</string>
    <string name="limitCameraToWifiSummary">Use this if you do not have a data plan. Changes require app restart.
    </string>
    <string name="limitDataToWiFiHeader">Limit all app traffic to WiFi</string>
    <string name="limitDataToWiFiSummary">Use this if you do not have a data plan. Changes require app restart.</string>
    <string name="noInternetConnection">No available WiFi connection. Enable mobile data in settings to use the app.
    </string>
    <string name="downloadLocation">Download location</string>
    <string name="downloadLocationSummary">Where you want your files to be downloaded</string>

    <string name="preferencesFeatures">App features</string>
    <string name="preferencesData">Data usage</string>
    <string name="preferencesAbout">About the app</string>
    <string name="disableThumb">Disable thumbnails</string>
    <string name="disableThumbSummary">Conserves memory and bandwidth. Disable thumbnails if you experience crashes.
    </string>
    <string name="donate">Donate</string>
    <string name="donateSummary">Click to donate a small amount to help out the developer.</string>
    <string name="skyDriveQuota">Space on OneDrive</string>
    <string name="skyDriveQuotaLoading">Getting numbers from OneDrive…</string>
    <string name="skyDriveQuotaSummary">You\'re using %1$s of %2$s available</string>

    <string name="audioServiceName">Explorer for OneDrive Music</string>
    <string name="audioBuffering">Buffering song</string>
    <string name="audioBufferingSummary">Buffering the song from your OneDrive</string>
    <string name="audioNotPlaying">Not playing</string>
    <string name="audioNotPlayingSummary">No songs in playlist. Tap some songs in the app to play them.</string>
    <string name="audioPlaying">Playing</string>
    <string name="audioReturnToControls">Tap this notification to open music controls.</string>
    <string name="audioStopped">Stopped</string>
    <string name="audioStarted">Started</string>
    <string name="audioPaused">Paused</string>
    <string name="audioUpNext">Up next</string>
    <string name="audioQueue">Queue</string>
    <string name="audioShuffle">Shuffle</string>
    <string name="audioRepeat">Repeat</string>
    <string name="audioRemove">Remove</string>
    <string name="audioStop">Stop</string>
    <string name="audioPlay">Play</string>
    <string name="audioPause">Pause</string>
    <string name="audioSkip">Skip</string>
    <string name="audioAddedToPlayingQueue">added to playing queue</string>
    <string name="audioTapASong">Tap a song</string>
    <string name="audioTapToAddToQueue">Tap a song to add it to the playing queue</string>
    <string name="audioNothingToSkipTo">No song to skip to</string>
    <string name="audioQueueInstructions">Drag and drop to change the queue. Slide left to remove.</string>
    <string name="audioControls">Music controls</string>

    <string name="audioQueueClear">Clear</string>
    <string name="items">items</string>


</resources>
