<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
            android:title="@string/preferencesAbout">

        <Preference android:title="@string/skyDriveQuota"
                    android:summary="@string/skyDriveQuotaLoading"
                    android:key="skydrive_storage_quota"
                />


        <PreferenceScreen android:icon="@drawable/emblem_shared"
                          android:title="@string/donate"
                          android:summary="@string/donateSummary">

            <intent android:action="android.intent.action.VIEW"
                    android:data="https://play.google.com/store/apps/details?id=com.killerud.donation" />

        </PreferenceScreen>

    </PreferenceCategory>
</PreferenceScreen>