<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:aefs="http://schemas.android.com/apk/res-auto">


    <item
            android:id="@+id/share"
            android:showAsAction="always"
            aefs:showAsAction="always"
            android:title="@string/share"
            android:visible="true"
            android:icon="@android:drawable/ic_menu_share"
            />
    <item
            android:id="@+id/rename"
            android:showAsAction="always"
            aefs:showAsAction="always"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/rename"
            android:visible="true"
            />
    <item
            android:id="@+id/copy"
            android:showAsAction="always"
            aefs:showAsAction="always"
            android:icon="@drawable/ic_menu_copy_holo_light"
            android:title="@string/copy"
            android:visible="true"
            />
    <item
            android:id="@+id/cut"
            android:showAsAction="always"
            aefs:showAsAction="always"
            android:title="@string/cut"
            android:visible="true"
            android:icon="@drawable/ic_menu_cut_holo_light"
            />
    <item
            android:id="@+id/delete"
            android:showAsAction="always"
            aefs:showAsAction="always"
            android:title="@string/delete"
            android:visible="true"
            android:icon="@android:drawable/ic_menu_delete"
            />
</menu>